# SRAG

./: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
backend/: .env.example  __init__.py  app.py  crud.py  database.py  models.py  requirements.txt
data/: chat_history.db
data/text_files/: authentication_guide.md  billing_faq.txt  iron_deficiency_info.txt  leave_policy.txt  onboarding_guide.md  refund_policy.txt  supervised_vs_unsupervised.txt  vector_embeddings_explained.txt
data/vector_store/: chroma.sqlite3
data/vector_store/ff6e30b7-2de3-4228-9224-2d5f82415451/: index_metadata.pickle
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  DocumentList.jsx  DocumentUpload.jsx  Sidebar.jsx
frontend/src/pages/: ChatPage.jsx  DocumentsPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js
notebook/: document.ipynb  pdf_loader.ipynb
srag/: __init__.py  config.py  exceptions.py  logging_config.py
srag/core/: __init__.py  chunking.py  embeddings.py  retriever.py  vector_store.py
srag/llm/: __init__.py  base.py
srag/loaders/: __init__.py  document_loader.py
