[project]
name = "srag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "tqdm>=4.67.1",
]
